2022-10-16T16:24:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3260133008 # 941
* notice: last 14d: unq all: 5 22
* notice: prev accum: outdated-unq outdated-all / unq all: 337 590 / 348 611
* notice: next accum: outdated-unq outdated-all / unq all: 337 590 / 349 612
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-16]

2022-10-16T01:56:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3257892985 # 939
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
* notice: next accum: outdated-unq outdated-all / unq all: 337 590 / 348 611
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [2022-10-01] / [2022-10-15]

2022-10-15T16:24:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3256360937 # 938
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
* notice: next accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]

2022-10-15T08:24:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3255003264 # 937
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 334 584 / 345 606
* notice: next accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -3 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]

2022-10-15T01:54:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3254014418 # 936
* notice: last 14d: unq all: 5 22