@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-16T16:24:44Z",
+  "timestamp" : "2022-10-17T08:33:00Z",
   "count_outdated" : 590,
   "uniques_outdated" : 337,
-  "count" : 612,
-  "uniques" : 349,
+  "count" : 613,
+  "uniques" : 350,
   "clones" : [
     {
       "timestamp": "2022-10-03T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
