@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 5,
   "clones": [
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
