@@ -1,3 +1,11 @@
+2022-10-17T08:33:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3263579167 # 943
+* notice: last 14d: unq all: 5 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 337 590 / 349 612
+* notice: next accum: outdated-unq outdated-all / unq all: 337 590 / 350 613
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-17]
+
 2022-10-16T16:24:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3260133008 # 941
 * notice: last 14d: unq all: 5 22
